integrating with thingsboard

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,26 +15,41 @@ lib_dir = ../..
 [env]
 platform = espressif32
 board = ttgo-t-oi-plus
+lib_ldf_mode = deep+
 platform_packages = espressif/toolchain-riscv32-esp @ 8.4.0
-
 framework = arduino
 board_build.mcu = esp32c3
 board_build.f_cpu = 160000000L
 upload_speed = 921600
 monitor_speed = 115200
 lib_ignore = examples
-lib_deps =
+lib_deps = 
 	bblanchon/ArduinoJson@^6.19.4
 	mathertel/OneButton@^2.0.3
 board_build.filesystem = littlefs
 
 [env:release]
-extends = env 
-build_flags =
+extends = env
+lib_ldf_mode = deep+
+build_flags = 
 	-fpermissive
+lib_deps = 
+	mathertel/OneButton@^2.6.1
+	bblanchon/ArduinoJson@^6.2.0
+	thingsboard/ThingsBoard@^0.14.0
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/ArduinoHttpClient@^0.6.1
+
 [env:debug]
 extends = env
-build_type = debug 
-build_flags =
+lib_ldf_mode = deep+
+build_type = debug
+build_flags = 
 	-fpermissive
 	-D CORE_DEBUG_LEVEL=3
+lib_deps = 
+	mathertel/OneButton@^2.6.1
+	bblanchon/ArduinoJson@^6.2.0
+	thingsboard/ThingsBoard@^0.14.0
+	knolleary/PubSubClient@^2.8
+	arduino-libraries/ArduinoHttpClient@^0.6.1
